<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_dashboard_black_24dp"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/baseline_account_balance_wallet_black_24dp"
            android:title="@string/menu_wallet" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_black_24dp"
            android:title="@string/menu_setting" />
    </group>

    <group>
        <item android:title="Others">
            <menu>
                <item
                    android:id="@+id/nav_ketentuan_layanan"
                    android:icon="@drawable/baseline_menu_book_black_24dp"
                    android:title="@string/menu_ketentuan_layanan" />
                <item
                    android:id="@+id/nav_kebijakan_privasi"
                    android:icon="@drawable/baseline_privacy_tip_black_24dp"
                    android:title="@string/menu_kebijkan_prvasi" />
                <item
                    android:id="@+id/nav_bantuan"
                    android:icon="@drawable/baseline_help_black_24dp"
                    android:title="@string/menu_bantuan" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/baseline_info_black_24dp"
                    android:title="@string/menu_about" />
            </menu>
        </item>
    </group>
</menu>
