<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <ImageView
            android:layout_width="410dp"
            android:layout_height="216dp"
            app:srcCompat="@drawable/iklan"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/menu"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="447dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="165dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:paddingLeft="50dp"
                    app:srcCompat="@drawable/car"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="40dp"
                    android:text="@string/angkot"
                    android:textColor="#000000"
                    tools:ignore="MissingConstraints" />

                <ImageButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="1dp"
                    app:srcCompat="@drawable/paket"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="55dp"
                    android:text="@string/paket"
                    android:textColor="#000000"
                    tools:ignore="MissingConstraints" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/rute"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:layout_width="87dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="25dp"
                    android:text="@string/rute"
                    android:textColor="#000000"
                    tools:ignore="MissingConstraints" />

                <ImageButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="74dp"
                    android:layout_height="85dp"
                    app:srcCompat="@drawable/troli"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:text="@string/belanja"
                    android:textColor="#000000"
                    tools:ignore="MissingConstraints" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:paddingLeft="1dp"
                    app:srcCompat="@drawable/darurat"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="45dp"
                    android:text="@string/darurat"
                    android:textColor="#000000"
                    tools:ignore="MissingConstraints" />

                <ImageButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="84dp"
                    app:srcCompat="@drawable/star"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="40dp"
                    android:text="@string/langganan"
                    android:textColor="#000000"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>